tests/warn/colon-call-invalid.jo
def send(to: String, subject: String): String = to + ":" + subject

def f =
  val a = (send: to = "x", subject = "y")   // error

def g =
  val b = [send: to = "x", subject = "y"]   // error

def h =
  val c = send(send: to = "x", subject = "y") // error

def j =
  send: send: "x", "y"   // error
